--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   firebase_auth: ^4.2.1
   flutter_feather_icons: ^2.0.0+1
   provider: ^6.0.5
+  google_fonts: ^3.0.1
+  flutter_riverpod: ^2.1.3
+  material_design_icons_flutter: ^6.0.7096
 
 
 dev_dependencies:
