creates services and appointment booking screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ flutter:
     - assets/images/onboarding/
     - assets/images/icons/
     - assets/images/png/
+    - assets/images/appointments/
+    - assets/images/icons/arrow_right.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
