--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,20 @@ dependencies:
   cached_network_image: ^3.2.3
   horizontal_calendar: ^1.0.2
   percent_indicator: ^4.2.3
+  shared_preferences: ^2.0.20
+  qr_flutter: any
+  adaptive_dialog: ^1.8.3
+  image_picker: ^0.8.7+1
+  permission_handler: ^10.2.0
+  geolocator: ^9.0.2
+  flutter_native_image: ^0.0.6+1
+  adaptive_theme: ^3.2.0
+  
+  
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+    sdk: flutter        
 
   
   flutter_lints: ^2.0.0
