--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   geolocator: ^9.0.2
   flutter_native_image: ^0.0.6+1
   adaptive_theme: ^3.2.0
+  intl: ^0.18.0
+  google_maps_flutter: ^2.2.5
   
   
 
