Fixes UI Issues, Fixes agendas functionality, Creates QR code scan screen, Add notification functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fluttertoast: ^8.2.1
   liquid_pull_to_refresh: ^3.0.1
   animated_radial_menu: ^0.0.1
+  qr_code_scanner: ^1.0.1
   
   
 
