--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,10 @@
 <uses-feature android:name="android.hardware.camera" />
 <uses-feature android:name="android.hardware.camera.autofocus" />
    <application
-        android:label="aetherium_saloon_app"
+        android:label="Aetherium Saloon"
+        android:usesCleartextTraffic="true"
         android:name="${applicationName}"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyD83bL6G9N1zJnKRPdA0cqINbg86Xko1Nc"/>
