--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,13 @@ dependencies:
   firebase_core: ^2.9.0
   firebase_auth: ^4.2.2
   cloud_firestore: ^4.5.0
+  cloud_functions: ^4.3.1
   fluttertoast: ^8.2.1
   liquid_pull_to_refresh: ^3.0.1
   animated_radial_menu: ^0.0.1
   qr_code_scanner: ^1.0.1
   http: ^0.13.6
-  
+  firebase_storage: ^11.2.1
   
 
 dev_dependencies:
