--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  flutter_localizations:
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -30,7 +31,7 @@ dependencies:
   geolocator: ^9.0.2
   flutter_native_image: ^0.0.6+1
   adaptive_theme: ^3.2.0
-  intl: ^0.18.0
+  intl: ^0.17.0
   google_maps_flutter: ^2.2.5
   url_launcher: ^6.1.10
   firebase_core: ^2.9.0
@@ -43,6 +44,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   http: ^0.13.6
   firebase_storage: ^11.2.1
+  flutter_pdfview: ^1.3.1
   
 
 dev_dependencies:
