--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^0.13.6
   firebase_storage: ^11.2.1
   flutter_pdfview: ^1.3.1
+  firebase_app_check: ^0.1.4+2
   
 
 dev_dependencies:
