Fixes home screen appointments not loading

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "java.configuration.updateBuildConfiguration": "interactive",
-    "dart.flutterSdkPath": "/Users/Basit/flutter/flutter"
+    "dart.flutterSdkPath": "/Users/Basit/flutter-3.7.10"
 }
