--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^11.2.1
   flutter_pdfview: ^1.3.1
   firebase_app_check: ^0.1.4+2
+  flutter_phoenix: ^1.1.1
   
 
 dev_dependencies:
