Fix issues and added google calendar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "java.configuration.updateBuildConfiguration": "interactive",
-    "dart.flutterSdkPath": "/Users/Basit/flutter-3.7.10"
+    "dart.flutterSdkPath": "C:\\flutter_windows_3.7.0-stable\\flutter"
 }
