--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,16 +44,18 @@ dependencies:
   firebase_storage: ^11.2.1
   flutter_pdfview: ^1.3.1
   firebase_app_check: ^0.1.4+2
-  flutter_phoenix: ^1.1.1
+  path_provider: ^2.0.15
+  googleapis: ^11.2.0
+  googleapis_auth: ^1.4.1
+  easy_localization: ^3.0.2
   
-
 dev_dependencies:
   flutter_test:
     sdk: flutter        
 
   
-  flutter_lints: ^2.0.0
-
+  flutter_lints: ^1.0.0
+  change_app_package_name: ^1.1.0     
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -74,6 +76,7 @@ flutter:
     - assets/images/appointments/
     - assets/images/icons/arrow_right.svg
     - data/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
