Fixes issues and made changes in times of appointments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "java.configuration.updateBuildConfiguration": "interactive",
-    "dart.flutterSdkPath": "C:\\flutter_windows_3.7.0-stable\\flutter"
+    "dart.flutterSdkPath": "C:\\src\\flutter"
 }
