--- a/functions/package.json
+++ b/functions/package.json
@@ -22,5 +22,8 @@
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^3.0.0"
   },
-  "private": true
+  "private": true,
+  "version": "1.0.0",
+  "author": "",
+  "license": "ISC"
 }
