--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   webview_flutter: ^4.2.4
   flutter_local_notifications: ^16.0.0
   firebase_messaging: ^14.6.9
-  
+  add_2_calendar: ^2.2.5
 dev_dependencies:
   flutter_test:
     sdk: flutter        
